# bid-notice-web

./: .gitignore  README.md  package-lock.json  package.json  spider_list.sh  start_servers.sh  사용자_매뉴얼.md
backend/: CLAUDE.md  README.md  pyproject.toml  spider_list.sh  start_servers.sh
backend/app/: README copy.md  mysql_basic.py  mysql_bid.py  mysql_board.py  server_bid.py  server_board.py  server_mysql.py  server_spider.py  spider_bid.py  spider_detail.py  utils_data.py  utils_search.py
backend/config/: crontab
backend/docs/: 00-workflow.md  01-project-overview.md  02-backend-architecture.md  03-core-modules.md  04-api-reference.md  05-database-schema.md  11-debug-server_bid.md  README.md  cron.md  db_settings.md  memo-nas_folder.md
backend/docs/postman/: README.md  (+2 more)
backend/nodejs/: .env.example  .swcrc  README.md  env.config.cjs  env.config.js  package-lock.json  package.json  start-server.sh  tsconfig.json
backend/python/: README.md  bid_notice.db
backend/scripts/: entrypoint.sh  entrypoint_0.sh  spider.sh  start_servers.sh  stop_servers.sh  test.py
backend/src/: _spider_lxml.py  _utils_lxml.py  mysql_bid.py  mysql_board.py  mysql_database.py  mysql_logs.py  mysql_notice.py  mysql_settings copy.py  mysql_settings.py  nohup_board.out  pyproject.toml  server_bid.py  server_board.py  server_mysql.py  server_spider.py  spider_detail.py  spider_list.py  utils_lxml.py  utils_mysql.py  utils_nas.py  utils_search.py
backend/src_0/: mysql_bid.py  server_bid.py  spider_detail.py  spider_list.py  utils_data.py  utils_log.py  utils_nas.py  utils_search.py
(+688 files in other folders)
